crates/compiler/src/tests/e2e/bad/0046_integer_literal_type_mismatch/main.gom
fn main() {
    let arr = [10, 20, 30];
    let i: uint8 = 1;
    let v = array_get(arr, i);
    println(int32_to_string(v));
}
